# authwarden

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
authwarden/: __init__.py  exceptions.py  utils.py
authwarden/authentication/: encryption.py  jwt.py  oauth.py  oauth_state.py  password.py
authwarden/core/: config.py  context.py  manager.py
authwarden/dependencies/: current_user.py  permissions.py
authwarden/email/: base.py  console.py  mailgun.py  sendgrid.py  smtp.py  templates.py
authwarden/flows/: change_password.py  forgot_password.py  login.py  logout.py  oauth_accounts.py  oauth_authorize.py  oauth_callback.py  oauth_connect.py  oauth_disconnect.py  refresh.py  register.py  resend_verification.py  reset_password.py  reset_password_otp.py  set_password.py  verify_email.py  verify_otp.py
authwarden/mfa/: backup_codes.py  totp.py
authwarden/models/: requests.py  token.py  user.py
authwarden/notifications/: service.py
authwarden/permissions/: policies.py  roles.py
authwarden/routers/: _errors.py  auth.py  mfa.py  oauth.py
authwarden/session/: base.py  memory.py  redis.py
authwarden/sms/: base.py  console.py  sns.py  templates.py  twilio.py
authwarden/storage/: base.py  memory.py
docs/: api-reference.md  configuration.md  customization.md  index.md  installation.md  mfa.md  permissions.md  quickstart.md  security.md
docs/concepts/: facade.md  user-model.md  user-store.md
docs/flows/: login.md  logout-refresh.md  password-reset.md  registration.md  verification.md
docs/notifications/: email.md  sms.md
docs/oauth/: account-linking.md  apple.md  overview.md
tests/: conftest.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py
