[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authwarden"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pyjwt>=2.8.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pwdlib[argon2,bcrypt]>=0.2.0",
    "itsdangerous>=2.1.0",
    "pyotp>=2.9.0",
    "authlib>=1.3.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
    "pydantic[email]>=2.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev   = ["pytest", "pytest-asyncio", "httpx", "hatch", "faker", "respx"]

[tool.hatch.build.targets.wheel]
packages = ["authwarden"]
