[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authwarden"
version = "0.7.1"
description = "A production-grade, pluggable authentication library for FastAPI — JWT, OAuth2 (8 providers), MFA, RBAC, and full flow flexibility (email/SMS, link/OTP, multi-identifier login)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "John Adeniran (timihack)" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Security :: Cryptography",
    "Typing :: Typed",
]
keywords = ["fastapi", "authentication", "oauth2", "jwt", "mfa", "rbac", "security"]

dependencies = [
    "fastapi>=0.110.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pwdlib[argon2,bcrypt]>=0.2.0",
    "pyjwt>=2.8.0",
    "itsdangerous>=2.1.0",
    "pyotp>=2.9.0",
    "authlib>=1.3.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "aiosmtplib>=3.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
sns = ["boto3>=1.34.0"]
redis = ["redis>=5.0.0"]
all = ["boto3>=1.34.0", "redis>=5.0.0"]

dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "boto3>=1.34.0",
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/timihack/authwarden"
Repository = "https://github.com/timihack/authwarden"
Issues = "https://github.com/timihack/authwarden/issues"
Changelog = "https://github.com/timihack/authwarden/releases"

[tool.hatch.build.targets.wheel]
packages = ["authwarden"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]